log/build_2026-06-20_11-49-00/hybrid_planner/stderr.log
/home/nova/drone_ws/src/hybrid_planner/src/planner_node.cpp:20:7: error: redefinition of ‘class hybrid_planner::PlannerNode’
   20 | class PlannerNode : public rclcpp::Node
      |       ^~~~~~~~~~~
In file included from /home/nova/drone_ws/src/hybrid_planner/src/planner_node.cpp:13:
/home/nova/drone_ws/src/hybrid_planner/include/hybrid_planner/rrt_prm_astar.hpp:33:8: note: previous definition of ‘class hybrid_planner::PlannerNode’
   33 | struct PlannerNode
      |        ^~~~~~~~~~~
/home/nova/drone_ws/src/hybrid_planner/src/planner_node.cpp: In function ‘int main(int, char**)’:
/home/nova/drone_ws/src/hybrid_planner/src/planner_node.cpp:225:15: error: no matching function for call to ‘spin(std::shared_ptr<hybrid_planner::PlannerNode>)’
  225 |   rclcpp::spin(std::make_shared<hybrid_planner::PlannerNode>());
      |   ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/nova/drone_ws/src/hybrid_planner/src/planner_node.cpp:8:
/opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:45:1: note: candidate: ‘void rclcpp::spin(rclcpp::node_interfaces::NodeBaseInterface::SharedPtr)’
   45 | spin(rclcpp::node_interfaces::NodeBaseInterface::SharedPtr node_ptr);
      | ^~~~
/opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:45:60: note:   no known conversion for argument 1 from ‘shared_ptr<hybrid_planner::PlannerNode>’ to ‘shared_ptr<rclcpp::node_interfaces::NodeBaseInterface>’
   45 | spin(rclcpp::node_interfaces::NodeBaseInterface::SharedPtr node_ptr);
      |      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:49:1: note: candidate: ‘void rclcpp::spin(rclcpp::Node::SharedPtr)’
   49 | spin(rclcpp::Node::SharedPtr node_ptr);
      | ^~~~
/opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:49:30: note:   no known conversion for argument 1 from ‘shared_ptr<hybrid_planner::PlannerNode>’ to ‘shared_ptr<rclcpp::Node>’
   49 | spin(rclcpp::Node::SharedPtr node_ptr);
      |      ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
gmake[2]: *** [CMakeFiles/planner_node.dir/build.make:76: CMakeFiles/planner_node.dir/src/planner_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:169: CMakeFiles/planner_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
